# transcribe-diarize-service

./: .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/: main.py  pipeline_service.py  transcription_service.py  utils.py
src/core/: utils.py
src/services/: diarization_service.py  diarization_sortformer_service.py  pipeline_service.py  transcription_service.py
tests/: test_diarization.py  test_pipeline.py  test_transcription.py
